--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "ts-localstorage": "^2.0.0",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
